добавляет форму в футер

--- a/index.html
+++ b/index.html
@@ -373,6 +373,10 @@
                   </a>
                 </li>
               </ul>
+      </div>
+      <div>
+        <p>Підпишіться на розсилку</p>
+        <form action=""></form>
       </div>    
     </div>      
   </footer>
