--- a/index.html
+++ b/index.html
@@ -407,14 +407,14 @@
         </div>
         <div class="form-field">
           <label for="mail" class="form-lable">Пошта</label>
-          <input type="email" class="form-input" name="user_mail" id="mail">
+          <input type="email" class="form-input" name="user_mail" id="mail" required>
           <svg class="form-icon" width="18px" height="18px">
             <use href="./images/icons2.svg#icon-email-black-18dp-1"></use>
           </svg>
         </div>
         <div class="form-field">
           <label for="phone" class="form-lable">Телефон</label>
-          <input type="tel" class="form-input" name="user_phone" id="phone">
+          <input type="tel" class="form-input" name="user_phone" id="phone" required>
           <svg class="form-icon" width="18px" height="18px">
             <use href="./images/icons2.svg#icon-phone-black-18dp-1"></use>
           </svg>
@@ -424,7 +424,7 @@
         <textarea class="comment" name="user_comment" id="comment" cols="30" rows="10" placeholder="Введіть текст"></textarea>
                 
         <label for="policy" class="policy-label" >
-        <input type="checkbox" name="policy" id="policy" class="checkbox-input">
+        <input type="checkbox" name="policy" id="policy" class="checkbox-input" required>
         <svg class="checkbox-icon-on" width="16px" height="15px">
           <use class="checkbox-icon-own-on" href="./images/icons2.svg#icon-Vector-2"></use>
         </svg>
