--- a/portfolio.html
+++ b/portfolio.html
@@ -237,7 +237,20 @@
                   </a>
                 </li>
               </ul>
-      </div>    
+      </div>
+      <div class="form-footer">
+        <p class="form-title">Підпишіться на розсилку</p>
+        <form class="footer-form">
+          <label for="email">
+            <input type="email" name="email" placeholder="E-mail" id="email" class="mailing-input">
+          </label>
+          <button type="submit" class="form-button button">Підписатися
+            <svg class="send-icon" width="24" height="24">
+              <use href="./images/icons2.svg#icon-icon-send"></use>
+            </svg>
+          </button>
+        </form>
+      </div>       
     </div>      
   </footer> 
 </body>
