--- a/index.html
+++ b/index.html
@@ -420,7 +420,8 @@
         </div>
         <div class="form-field">
           <label for="phone" class="form-lable">Телефон</label>
-          <div class="form-container"><input type="tel" class="form-input" name="user_phone" id="phone" required>
+          <div class="form-container">
+          <input type="tel" class="form-input" name="user_phone" id="phone" required>
           <svg class="form-icon" width="18px" height="18px">
             <use href="./images/icons2.svg#icon-phone-black-18dp-1"></use>
           </svg>
